--- a/kiarra-site/public/manifest.json
+++ b/kiarra-site/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kiarra Site",
+  "name": "Personal Site",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "KP.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
